--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@
     --primary: #9333ea;
     --font-main: "Poppins", sans-serif;
 }
+* {
+    box-sizing: border-box;
+}
 
 body {
     margin: 0;
@@ -250,7 +253,7 @@ footer {
     flex: 1 1 300px;
     max-width: 400px;
     background-color: #1e293b;
-    padding: 2rem;
+
     border-radius: 16px;
     box-shadow: 0 0 10px rgba(147, 51, 234, 0.3);
 }
@@ -365,23 +368,6 @@ footer {
     to {
         opacity: 1;
         transform: translateY(0);
-    }
-}
-
-/* Zoom Animation */
-.zoom-in {
-    animation: zoomIn 0.7s ease-in-out forwards;
-    opacity: 0;
-}
-
-@keyframes zoomIn {
-    0% {
-        transform: scale(0.8);
-        opacity: 0;
-    }
-    100% {
-        transform: scale(1);
-        opacity: 1;
     }
 }
 
@@ -592,12 +578,14 @@ video {
     .contact-container {
         flex-direction: column;
         gap: 1.5rem;
+        align-items: center;
+    }
+    .contact-container .contact-info {
+        width: 100%;
     }
 
-    .contact-form,
-    .contact-info {
+    .contact-container .contact-form {
         width: 100%;
-        max-width: 100%;
     }
 }
 .skill-description {
