--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,7 @@ footer {
 .contact-form input,
 .contact-form textarea {
     padding: 0.75rem;
-    border: none;
+    border: revert;
     border-radius: 10px;
     background-color: #1e293b;
     color: white;
@@ -355,6 +355,7 @@ footer {
 }
 .contact-info {
     flex: 1 1 320px;
+    border: revert;
     max-width: 400px;
     padding: 2rem 1.5rem;
     background-color: #1e293b;
